--- a/DarkerPlight/Views/ChatRoom/ChatDashboard.cshtml
+++ b/DarkerPlight/Views/ChatRoom/ChatDashboard.cshtml
@@ -1,3 +1,46 @@
-﻿<div class="container-fluid">
+﻿@{
+    Layout = "_BasicLayout";
+}
 
+<style>
+    .custom {
+        font-family: 'Big Shoulders Stencil Display', cursive;
+    }
+
+    .custom2 {
+        font-family: 'Bebas Neue', cursive;
+    }
+</style>
+
+<div id="app">
+    <div id="errorMsg" class="alert alert-info fade show" style="margin-top:10px; visibility:hidden; position:absolute" role="alert">
+        <strong>Notice:</strong> {{errorMessage}}.
+    </div>
+    <div class="d-flex justify-content-center" style="margin-top:80px;">
+        <div class="container h-100">
+            <div class="row h-100 justify-content-center align-items-center">
+                <div class="col-6 mx-auto">
+                    <div class="text-center p-3">
+                        <img style="box-shadow:15px 15px 15px rgba(0, 0, 0, 0.35)" src="~/img/anoLog.png" class="rounded-circle" width="130" height="130" alt="Alternate Text" />
+                    </div>
+                    <div class="jumbotron" style="box-shadow:15px 15px 15px rgba(0, 0, 0, 0.35)">
+                        <h2 class="custom text-center" style="color:#173b66">Provide your Login Details Below</h2>
+                        <div class="form-group mt-3">
+                            <label class="custom2 text-info"><i class="fa-1px fas fa-users mr-1"> </i> Username</label>
+                            <input type="text" name="name" value="" class="form-control" v-model="username" />
+                        </div>
+                        <div class="form-group">
+                            <label class="custom2 text-info"><i class="fa-1px fa fa-lock mr-1"> </i> Password</label>
+                            <input type="password" name="name" value="" class="form-control" v-model="password" />
+                        </div>
+                        <div class="text-center">
+                            <button v-on:click="authenticateUser" class="btn btn-lg btn-dark"><i class="fas fa-arrow-right"></i> Proceed</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+<script src="~/js/AppHub/loginpage.js"></script>
