feed backs adjustment to chathub

--- a/DarkerPlight/Views/ChatRoom/Chat.cshtml
+++ b/DarkerPlight/Views/ChatRoom/Chat.cshtml
@@ -4,6 +4,9 @@
 
 
 <style>
+    
+
+
     .contacts li:hover {
         background-color: rgba(0,0,0,0.3) !important;
     }
@@ -174,7 +177,7 @@
                         <div class="input-group-append">
                             <span class="input-group-text attach_btn"><i class="fas fa-paperclip"></i></span>
                         </div>
-                        <textarea id="message" name="" class="form-control type_msg" placeholder="Type your message..."></textarea>
+                        <textarea v-on:keyup.enter="sendMessage" id="message" name="" class="form-control type_msg" placeholder="Type your message..."></textarea>
                         <div class="input-group-append">
                             <span class="input-group-text send_btn" v-on:click="sendMessage"><i class="fas fa-location-arrow"></i></span>
                         </div>
