--- a/DarkerPlight/wwwroot/css/style.css
+++ b/DarkerPlight/wwwroot/css/style.css
@@ -1,4 +1,23 @@
-	body,html{
+.msg_card_body::-webkit-scrollbar {
+	width: 20px;
+}
+
+.msg_card_body::-webkit-scrollbar-track {
+	background-color: transparent;
+}
+
+.msg_card_body::-webkit-scrollbar-thumb {
+	background-color: red;
+	border-radius: 20px;
+	border: 6px solid green;
+	background-clip: content-box;
+}
+
+	::-webkit-scrollbar-thumb:hover {
+		background-color: #a8bbbf;
+	}
+	
+body,html{
 			height: 100%;
 			margin: 0;
 			background: #7F7FD5;
