--- a/DarkerPlight/Views/ChatRoom/ChatDashboard.cshtml
+++ b/DarkerPlight/Views/ChatRoom/ChatDashboard.cshtml
@@ -19,7 +19,7 @@
     <div class="d-flex justify-content-center" style="margin-top:80px;">
         <div class="container h-100">
             <div class="row h-100 justify-content-center align-items-center">
-                <div class="col-6 mx-auto">
+                <div class="col-md-6 col-sm-12 mx-auto">
                     <div class="text-center p-3">
                         <img style="box-shadow:15px 15px 15px rgba(0, 0, 0, 0.35)" src="~/img/anoLog.png" class="rounded-circle" width="130" height="130" alt="Alternate Text" />
                     </div>
