--- a/DarkerPlight/Views/Shared/_BasicLayout.cshtml
+++ b/DarkerPlight/Views/Shared/_BasicLayout.cshtml
@@ -22,6 +22,7 @@
     <script src="~/lib/bootbox/bootbox.min.js"></script>
     <script src="~/lib/axios/axios.js"></script>
     <link href="~/css/style.css" rel=stylesheet>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 <!--Coded With Love By Mutiullah Samim-->
