--- a/DarkerPlight/Views/Shared/_Layout.cshtml
+++ b/DarkerPlight/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <script src="~/lib/vue/vue.js"></script>
     <script src="~/lib/bootbox/bootbox.min.js"></script>
     <script src="~/lib/axios/axios.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
