--- a/DarkerPlight/Views/ChatRoom/Chat.cshtml
+++ b/DarkerPlight/Views/ChatRoom/Chat.cshtml
@@ -7,7 +7,6 @@
     .contacts li:hover {
         background-color: rgba(0,0,0,0.3) !important;
     }
-
     .active {
         background-color: rgba(0,0,0,0.3);
     }
@@ -42,17 +41,17 @@
         .msg {
             height: 300px !important;
             margin-top: 400px;
+            margin-bottom: 630px;
         }
     }
-
     @@media (max-width: 454px) {
         .cip1 {
             max-height: 50px !important;
         }
-
         .msg {
             height: 50px !important;
             margin-top: 700px;
+            margin-bottom: 630px;
         }
         .custom{
             font-size:14px;
@@ -63,6 +62,7 @@
         .conver{
             padding:0;
         }
+          
     }
 </style>
 
@@ -71,7 +71,7 @@
     <!--profile overlay-->
     <div id="overlay" onclick="off()">
         <div class="row h-100 justify-content-center align-items-center">
-            <div class="col-4 mx-auto">
+            <div class="col-md-8 col-lg-6 col-sm-12 mx-auto">
                 <div class="card">
                     <div class="card-header bg-dark">
                         <h2 class="custom text-white"><b>PROFILE PAGE</b></h2>
@@ -108,7 +108,6 @@
             </div>
         </div>
     </div>
-
 
     <!--UserName-->
     <input type="text" id="username" hidden name="name" value="@ViewBag.Username" />
@@ -158,7 +157,7 @@
             </div>
         </div>
 
-        <div class="col-md-12 col-xl-8 chat col-sm-12 msg">
+        <div class="col-md-12 col-xl-8 chat col-sm-12 msg pb-3">
             <div class="card">
                 <div class="card-header msg_head">
                     <div class="d-flex bd-highlight">
@@ -211,6 +210,15 @@
             </div>
         </div>
     </div>
+    <div class="f_pale m-sm-5" style="margin-top:30px;">
+        <div v-on:click="scrollUp" style="visibility:hidden; position:fixed; bottom:5px; right:0" class="upper">
+            <button class="btn btn-lg" style="border-radius:40px; background-color:#fff; box-shadow:7px 7px 7px rgba(56, 56, 56, 0.19)"><i class="fas fa-arrow-up"></i></button>
+        </div>
+        <div v-on:click="scrollDown" style="visibility:hidden; position:fixed; bottom:5px; right:0" class="down">
+            <button class="btn btn-lg" style="border-radius:40px; background-color:#fff; box-shadow:7px 7px 7px rgba(56, 56, 56, 0.19)"><i class="fas fa-arrow-down"></i></button>
+        </div>
+    </div>
+    
 </div>
 
 <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
@@ -224,7 +232,26 @@
         document.getElementById("overlay").style.display = "none";
     }
 </script>
+<script>
+    $(document).scroll(function () {
+        var value = $(document).scrollTop();/* <== here*/
+
+        if (value >= 1000) {
+            
+        }
+        else if (value >= 250) {
+            $('.upper').css({ "visibility": "visible" });
+            $('.down').css({ "visibility": "hidden" });
+        }
+        else {
+            $('.down').css({ "visibility": "visible" });
+            $('.upper').css({ "visibility": "hidden" });
+        }
+    });
+</script>
+
 <script src="~/js/chatHub.js"></script>
+
 
 
 
