--- a/DarkerPlight/Views/Shared/_BasicLayout.cshtml
+++ b/DarkerPlight/Views/Shared/_BasicLayout.cshtml
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.js"></script>
     <script src="~/lib/vue/vue.js"></script>
-    <script src="~/lib/bootbox/bootbox.min.js"></script>
+    <script src="~/js/bootbox/bootbox.min.js"></script>
     <script src="~/lib/axios/axios.js"></script>
     <link href="~/css/style.css" rel=stylesheet>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,8 +29,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/index.js"></script>
-    
-</body>
+    <!-- JavaScript Bundle with Popper -->
+  </body>
 </html>
   
 
