--- a/DarkerPlight/Views/ChatRoom/Chat.cshtml
+++ b/DarkerPlight/Views/ChatRoom/Chat.cshtml
@@ -208,13 +208,13 @@
                         <h1 class="text-center text-info custom2"><b>NO MESSAGE AVAILABLE</b></h1>
                     </div>
                 </div>
-                <div v-if="staticUser == null" id="welcome" class="card-body msg_card_body">
+                <!--<div v-if="staticUser == null" id="welcome" class="card-body msg_card_body">
                     <div class="text-center">
-                        <i class="fa-5x fas fa-users text-info"></i>
-                        <h2 style="color:#173b66" class="mt-3 custom"><b>WELCOME TO THE ANONYMOUS GROUP WHERE YOU CAN MEET AND CHAT WITH STRANGERS FROM ALL OVER THE WORLD. HAVE FUN...</b></h2>
-                        <button style="background-color:white; border-radius:40px; color:#203e6b; box-shadow:9px 9px 9px 9px rgba(5, 5, 5, 0.26);" class="btn mt-5"><i class="fa-3x fas fa-plus"></i></button>
-                    </div>
-                </div>
+                        <i class="fa-5x fas fa-users text-info"></i>-->
+                        @*<h2 style="color:#173b66" class="mt-3 custom"><b>WELCOME TO THE ANONYMOUS GROUP WHERE YOU CAN MEET AND CHAT WITH STRANGERS FROM ALL OVER THE WORLD. HAVE FUN...</b></h2>
+                        <button style="background-color:white; border-radius:40px; color:#203e6b; box-shadow:9px 9px 9px 9px rgba(5, 5, 5, 0.26);" class="btn mt-5"><i class="fa-3x fas fa-plus"></i></button>*@
+                    <!--</div>
+                </div>-->
                 <div class="card-footer">
                     <div class="input-group">
                         <div class="input-group-append">
